# lost.london-v2

./: .env.vercel  CLAUDE.md  MOONSHOT_RESTART_PLAN.md  RESTART_PLAN_JAN_2026.md  package-lock.json  package.json  tsconfig.tsbuildinfo
.claude/commands/: deploy.md  evolve.md  prime.md  test-zep.md
.claude/reference/: workflow-methodology.md  zep-integration.md
agent/: pyproject.toml  requirements.txt
agent/scripts/: extract_keywords.py
agent/src/: __init__.py  agent.py  database.py  librarian.py  models.py  tools.py
frontend/src/app/: layout.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/zep/user/: route.ts
frontend/src/components/: voice-input.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/articles/: route.ts
src/app/api/copilotkit/: route.ts
src/app/api/user-profile/: route.ts
src/app/api/zep/user/: route.ts
src/app/article/[slug]/: page.tsx
src/app/articles/: page.tsx
src/app/auth/[path]/: page.tsx
src/app/dashboard/: page.tsx
src/app/profile/: page.tsx
src/components/: ArticlesSection.tsx  BookStrip.tsx  ChatMessages.tsx  ConfirmInterest.tsx  CopilotWrapper.tsx  DebugPanel.tsx  Footer.tsx  Header.tsx  InterestGraph3D.tsx  LibrarianAvatar.tsx  TopicChangeConfirmation.tsx  VicAvatar.tsx  auth-header.tsx  providers.tsx  rosie-voice.tsx  voice-input.tsx
src/components/generative-ui/: ArticleCard.tsx  ArticleGrid.tsx  BookDisplay.tsx  LocationMap.tsx  Timeline.tsx  TopicContext.tsx
src/lib/auth/: server.ts
